# simple-projects

./: README.md
snake/c/: Makefile  README.md  actions.c  actions.h  dirqueue.c  dirqueue.h  display.c  display.h  keymap.c  keymap.h  list.c  list.h  main.c  point.c  point.h  snake  state.c  state.h
snake/c/tests/: test_list.c  test_point.c  test_state.c
snake/clojure/: CHANGELOG.md  README.md  project.clj
snake/clojure/src/snake/: core.clj  game.clj  game_state.clj  menu.clj  pair.clj  state_machine.clj
snake/python/: pyproject.toml
snake/python/snake/: snake.py
